--- a/src/main/resources/templates/admin/kehu/yaoqingma.html
+++ b/src/main/resources/templates/admin/kehu/yaoqingma.html
@@ -8,9 +8,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport"
           content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=0">
-    <link rel="stylesheet" href="../../static/layuiadmin/layui/css/layui.css" media="all">
-    <link rel="stylesheet" href="/static/layuiadmin/style/admin.css" media="all">
-    <link rel="stylesheet" href="/static/layuiadmin/style/login.css" media="all">
+    <link rel="stylesheet" th:href="@{/static/layuiadmin/layui/css/layui.css}" media="all">
+    <link rel="stylesheet" th:href="@{/static/layuiadmin/style/admin.css}" media="all">
+    <link rel="stylesheet" th:href="@{/static/layuiadmin/style/admin.css}" media="all">
 </head>
 <body>
 
@@ -29,7 +29,7 @@
                     <div class="layui-col-xs7">
                         <label class="layadmin-user-login-icon layui-icon layui-icon-cellphone"
                                for="LAY-user-login-cellphone"></label>
-                        <input type="text" name="phone" value="13119129568" id="LAY-user-login-cellphone" lay-verify="required"
+                        <input type="text" name="phone" id="LAY-user-login-cellphone" lay-verify="required"
                                lay-vertype="tips"
                                placeholder="输入手机号码进行查询" class="layui-input">
                     </div>
@@ -60,7 +60,7 @@
 
 </div>
 
-<script src="/static/layui/layui.js"></script>
+<script th:src="@{/static/layui/layui.js}"></script>
 
 <script>
     var layer;
@@ -87,8 +87,8 @@
         }
 
         $.ajax({
-            url: '/kehu/yaoqingmalist',
-            type: 'post',
+            url: 'http://sanli.zhongyimoni.cn:8081/kehu/chaxunyaoqingma',
+            type: 'GET',
             dataType: 'json',
             data: {
                 phone: phone
