--- a/src/main/resources/templates/admin/login.html
+++ b/src/main/resources/templates/admin/login.html
@@ -26,13 +26,13 @@
                 <div class="layui-form-item">
                     <label class="layadmin-user-login-icon layui-icon layui-icon-username"
                            for="LAY-user-login-username"></label>
-                    <input type="text" name="username" id="LAY-user-login-username"  th:value="admin"  lay-verify="required"
-                           placeholder="手机号码" class="layui-input">
+                    <input type="text" name="username" id="LAY-user-login-username"    lay-verify="required"
+                           placeholder="用户名/手机号码" class="layui-input">
                 </div>
                 <div class="layui-form-item">
                     <label class="layadmin-user-login-icon layui-icon layui-icon-password"
                            for="LAY-user-login-password"></label>
-                    <input type="password" name="password" id="LAY-user-login-password" th:value="admin"  lay-verify="required"
+                    <input type="password" name="password" id="LAY-user-login-password"   lay-verify="required"
                            placeholder="密码" class="layui-input">
                 </div>
                 <div class="layui-form-item">
@@ -40,7 +40,7 @@
                         <div class="layui-col-xs7">
                             <label class="layadmin-user-login-icon layui-icon layui-icon-vercode"
                                    for="LAY-user-login-vercode"></label>
-                            <input type="text" name="code" id="LAY-user-login-vercode" th:value="1111" lay-verify="required"
+                            <input type="text" name="code" id="LAY-user-login-vercode"  lay-verify="required"
                                    placeholder="图形验证码" class="layui-input">
                         </div>
                         <div class="layui-col-xs5">
@@ -64,7 +64,7 @@
                 <!--                <a href="javascript:;"><i class="layui-icon layui-icon-login-wechat"></i></a>-->
                 <!--                <a href="javascript:;"><i class="layui-icon layui-icon-login-weibo"></i></a>-->
 
-                <a href="/register/index" class="layadmin-user-jump-change layadmin-link">注册帐号</a>
+<!--                <a href="/register/index" class="layadmin-user-jump-change layadmin-link">注册帐号</a>-->
             </div>
         </div>
 
