--- a/src/main/resources/templates/admin/register.html
+++ b/src/main/resources/templates/admin/register.html
@@ -162,7 +162,7 @@
                             , icon: 1
                             , time: 3000
                         }, function () {
-                            location.href = "/toLogin";
+                            location.href = "toLogin";
                         });
 
                     } else {
