--- a/src/main/resources/templates/admin/role/menu.html
+++ b/src/main/resources/templates/admin/role/menu.html
@@ -11,7 +11,7 @@
             <li th:unless="${#lists.isEmpty(child.children)}" style="margin-top: 5px;margin-left: 1.5em">
                 <input type="checkbox" th:title="${child.name}" th:value="${child.id}"
                        th:data-parentIds="${child.parentIds}" lay-filter="roleMenu"/>
-                <th:block th:include="/admin/role/menu::addMenuLi(${child.children})"/>
+                <th:block th:include="admin/role/menu::addMenuLi(${child.children})"/>
             </li>
         </th:block>
     </ul>
@@ -29,7 +29,7 @@
                 <input type="checkbox" th:title="${child.name}" th:value="${child.id}"
                        th:data-parentIds="${child.parentIds}" lay-filter="roleMenu"
                        th:checked="${#strings.contains(menuIds,child.id)} ? checked "/>
-                <th:block th:include="/admin/role/menu::editMenuLi(${child.children})"/>
+                <th:block th:include="admin/role/menu::editMenuLi(${child.children})"/>
             </li>
         </th:block>
     </ul>
